--- a/static/styles/globals.css
+++ b/static/styles/globals.css
@@ -58,9 +58,24 @@
 }
 
 body{
-    background-color: yellowgreen;
+    background-color:var(--losangeles);
 }
-
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    gap: 10px;
+}
+.login{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    gap: 10px;
+}
 .nav {
   display: flex;
   justify-content: space-between;
@@ -70,7 +85,7 @@ body{
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   position: sticky;
   top: 0;
-  z-index: 1000;
+  z-index: 1;
   border-bottom: 2px solid black;
 }
 
