--- a/static/styles/globals.css
+++ b/static/styles/globals.css
@@ -60,6 +60,19 @@
 body{
     background-color:var(--losangeles);
 }
+.main{
+    /* height: 100vh;       */
+    position: absolute;
+    top: 10%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content:flex-start;
+    align-items:center;
+    flex-direction: column;
+
+}
 .container{
     display: flex;
     flex-direction: column;
@@ -83,8 +96,12 @@ body{
   padding: 1.5rem 10%;
   background-color: #ffffff;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  position: sticky;
-  top: 0;
+  position: absolute;
+    /* position: sticky; */
+    top: 0;
+  bottom: 90%;
+  left: 0;
+  right: 0;
   z-index: 1;
   border-bottom: 2px solid black;
 }
